# cmake-test

./: .gitignore  CMakeLists.txt
src/: main.c
